[package]
name = "zero_v_gen"
version = "0.1.0"
description = "Implementation helper macros for zero_v"
license = "MIT OR Apache-2.0"
authors = ["marshall <mcu@hey.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.4"

[dev-dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
zero_v = { path = ".." }
